--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html {
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    background-image: linear-gradient(45deg, rgba(2,0,36,1) 66%, rgba(9,9,121,1) 100%);
+    min-height: 100vh;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* Underline animation for links in /info */
+.info a {
+    position: relative;
+    color: theme('colors.purple.400');
+    text-decoration: none;
+}
+  
+.info a:hover {
+    color: theme('colors.purple.500');;
+}
+  
+.info a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: theme('colors.purple.500');;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+}
+  
+.info a:hover::before {
+    transform: scaleX(1);
 }
